--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- link referencia fontes-->
     <link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
-
-
-    <link href="https://www.flaticon.com/free-icon/java_226777" />
+    
+    <link href="https://github.com/a-paludetti/a-paludetti.github.io" />
     <title></title>
 
     <style>
@@ -33,24 +32,33 @@
         }
 
         div {
+            height: 300px;
+        }
+
+        .foto{
+            float: left;
+        }
+
+        .foootnote {
+            font-size: 10px;
+            margin: 0 auto;
+            position: absolute;
+            text-align: center;
         }
 
         .skills1 {
             background-image: url("/java.png");
+            background
         }
 
         p {
             padding: 10px;
-            line-height: 28px;
+            line-height: 30px;
             text-align: justify;
             position: relative;
             bottom: 0;
             margin: 0;
-            height: 30px;
-            transition: height .5s;
-            -webkit-transition: height .5s;
-            -moz-transition: height .5s;
-        }
+         }
 
         @media (max-width: 500px) {
             h1 {
@@ -92,8 +100,13 @@
     </style>
 </head>
 <body>
+    <div class="foto">
+        <div class="col-6">
+            <img src="IMG_0952.JPG" />
+        </div>
+    </div>
     <div class="name">
-        <div class="col-12">
+        <div class="col-6">
             <h1>
                 Aline Paludetti
             </h1>
@@ -102,24 +115,25 @@
             </h2>
         </div>
     </div>
+
     <div class="skills1">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                skill 1
+                Java<br />
             </p>
         </div>
     </div>
     <div class="skills2">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                skill 2
+                HTML/CSS
             </p>
         </div>
     </div>
     <div class="skills3">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                skill 3
+                Softskills
             </p>
         </div>
     </div>
@@ -130,8 +144,19 @@
             </p>
         </div>
     </div>
-    <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
+    <div class="contato">
+        <div class="col-12">
+            <p>
+                Telefone: +55 1197633-8343
+                e-mail: a.paludetti@gmail.com
+            </p>
+        </div>
+    </div>
+    <div class="foootnote">
+        <div class="col-12">
+            <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        </div>
+    </div>
     <!-- **boostrap** -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
