--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         .foto{
             float: left;
+            height: 200px;
         }
 
         .foootnote {
@@ -48,7 +49,6 @@
 
         .skills1 {
             background-image: url("/java.png");
-            background
         }
 
         p {
@@ -119,7 +119,7 @@
     <div class="skills1">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                Java<br />
+                Java<br /> 
             </p>
         </div>
     </div>
