--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         .skills1 {
             background-image: url("/java.png");
+            background
         }
 
         p {
@@ -102,6 +103,7 @@
 <body>
     <div class="foto">
         <div class="col-6">
+            <img height="200" />
             <img src="IMG_0952.JPG" />
         </div>
     </div>
