--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             max-width: 1000px;
         }
 
+        image{
+            float: left;
+            height: auto;
+            margin: 0 auto;
+            padding: 40px 20px 0 0;
+        }
+
         h1 {
             font-family: 'Calligraffitti', cursive;
             text-align: center;
@@ -32,13 +39,10 @@
         }
 
         div {
-            height: 300px;
+            position: relative;
         }
 
-        .foto{
-            float: left;
-            height: 200px;
-        }
+    .foto { background-image: url("/IMG_0952.JPG"); }
 
         .foootnote {
             font-size: 10px;
@@ -49,7 +53,6 @@
 
         .skills1 {
             background-image: url("/java.png");
-            background
         }
 
         p {
@@ -101,12 +104,10 @@
     </style>
 </head>
 <body>
-    <div class="foto">
-        <div class="col-6">
-            <img height="200" />
-            <img src="IMG_0952.JPG" />
+    <div class="foto>
+        <div class="col-6">            
         </div>
-    </div>
+        </div>
     <div class="name">
         <div class="col-6">
             <h1>
@@ -135,14 +136,15 @@
     <div class="skills3">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                Softskills
+                Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
             </p>
         </div>
     </div>
     <div class="skills3">
         <div class=" col-3 col-md-4 col-sm-12">
             <p>
-                skill 4
+                Hobbies:<br />
+
             </p>
         </div>
     </div>
@@ -151,6 +153,8 @@
             <p>
                 Telefone: +55 1197633-8343
                 e-mail: a.paludetti@gmail.com
+                github: <href="https://github.com/a-paludetti">a-paludetti</href>
+                linkedin: <href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/"></href>
             </p>
         </div>
     </div>
