--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             position: relative;
         }
 
-    .foto { background-image: url("/IMG_0952.JPG"); }
+        .foto { 
+        }
 
         .foootnote {
             font-size: 10px;
@@ -151,10 +152,10 @@
     <div class="contato">
         <div class="col-12">
             <p>
-                Telefone: +55 1197633-8343
-                e-mail: a.paludetti@gmail.com
-                github: <href="https://github.com/a-paludetti">a-paludetti</href>
-                linkedin: <href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/"></href>
+                Telefone: +55 1197633-8343 <br />
+                e-mail: a.paludetti@gmail.com <br />
+                github: <href="https://github.com/a-paludetti">a-paludetti</href><br />
+                <href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/">Linkedin</href>
             </p>
         </div>
     </div>
