--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- link referencia fontes-->
     <link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
-    
+    <link href="https://www.linkedin.com/" rel="shortlink" />
+    <link href="" />
+
     <link href="https://github.com/a-paludetti/a-paludetti.github.io" />
     <title></title>
 
     <style>
         body {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            margin: 0 auto;
-            max-width: 1000px;
         }
 
-        image{
+        /*image{
             float: left;
             height: auto;
             margin: 0 auto;
-            padding: 40px 20px 0 0;
-        }
+            padding: 40px 20px 0 0;*/
 
         h1 {
             font-family: 'Calligraffitti', cursive;
@@ -38,14 +37,14 @@
             margin: 0px 0 70px 0;
         }
 
-        div {
+        /*div {
             position: relative;
         }
 
-        .foto { 
-        }
+        /*.foto {
+        background-image: url("/IMG_0952.JPG"); }*/
 
-        .foootnote {
+        /*.foootnote {
             font-size: 10px;
             margin: 0 auto;
             position: absolute;
@@ -63,9 +62,9 @@
             position: relative;
             bottom: 0;
             margin: 0;
-         }
+        }*/
 
-        @media (max-width: 500px) {
+        /*@media (max-width: 500px) {
             h1 {
                 font-size: 30px;
                 margin-top: 20px;
@@ -100,69 +99,82 @@
             p{
                 position: absolute;
             }
-        }
+        }*/
 
     </style>
 </head>
 <body>
-    <div class="foto>
-        <div class="col-6">            
+    <div class="container">
+        <div class="foto>
+            <div class="col-6">
+                <img src="/IMG_0952.JPG" alt="Aline" style="width:200px;" />
+            </div>
         </div>
+        <div class="name">
+            <div class="col-6">
+                <h1>
+                    Aline Paludetti
+                </h1>
+                <h2>
+                    web &amp; java developer
+                </h2>
+            </div>
         </div>
-    <div class="name">
-        <div class="col-6">
-            <h1>
-                Aline Paludetti
-            </h1>
-            <h2>
-                web &amp; java developer
-            </h2>
+        <div class="skills1">
+            <div class=" col-3 col-md-4 col-sm-12">
+                <p>
+                    Java<br />
+                </p>
+            </div>
         </div>
-    </div>
-
-    <div class="skills1">
-        <div class=" col-3 col-md-4 col-sm-12">
-            <p>
-                Java<br /> 
-            </p>
+        <div class="skills2">
+            <div class=" col-3 col-md-4 col-sm-12">
+                <p>
+                    HTML/CSS
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="skills2">
-        <div class=" col-3 col-md-4 col-sm-12">
-            <p>
-                HTML/CSS
-            </p>
+        <div class="skills3">
+            <div class=" col-3 col-md-4 col-sm-12">
+                <p>
+                    Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="skills3">
-        <div class=" col-3 col-md-4 col-sm-12">
-            <p>
-                Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
-            </p>
+        <div class="skills3">
+            <div class=" col-3 col-md-4 col-sm-12">
+                <p>
+                    Histórico Proffisional:<br /><br />
+                    <strong>Telefonica S.A. – Julho/2016 – Março/2017</strong><br />
+                    Atendimento cliente interno<br />
+                    Atendimento segmento Fibra Optica, configuração, criação e suporte a campo para técnicos de fibra, confirmação de funcionamento e atendimento ao cliente interno e externo.<br /><br />
+                    <strong>Xerox do Brasil - de Abril/2012 a Abril/2014</strong><br />
+                    Atendimento avançado bilingüe<br />
+                    Atendimento a clientes no segmento de Informática (smartphones e tablets), atendimento primário à clientes A e B, com foco em resolução de problemas, satisfação e fidelização.<br /><br />
+                    <strong>Atento Brasil - de fevereiro/2010 a abril/2011</strong><br />
+                    Teleoperadora<br />
+                    Atendimento à clientes Itau-Unibanco, setor de financiamento de veículos.<br /><br />
+                    <strong>FIC - Financeira Itau CDB - de abril/2008 a setembro/2008</strong><br />
+                    Vendedora<br />
+                    Venda de cartão de crédito e cartões da loja, empréstimos via cartão e via cheque<br />
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="skills3">
-        <div class=" col-3 col-md-4 col-sm-12">
-            <p>
-                Hobbies:<br />
-
-            </p>
+        <div class="contato">
+            <div class="col-12">
+                <p>
+                    Telefone: +55 1197633-8343 <br />
+                    e-mail: a.paludetti@gmail.com <br />
+                    github: <a href="https://github.com/a-paludetti">a-paludetti</a><br />
+                    <a href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/" title="Linkedin">Linkedin</a>
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="contato">
-        <div class="col-12">
-            <p>
-                Telefone: +55 1197633-8343 <br />
-                e-mail: a.paludetti@gmail.com <br />
-                github: <href="https://github.com/a-paludetti">a-paludetti</href><br />
-                <href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/">Linkedin</href>
-            </p>
-        </div>
-    </div>
-    <div class="foootnote">
-        <div class="col-12">
-            <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-        </div>
+        <!--<div class="foootnote">
+            <div class="col-12">
+                <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+            </div>
+        </div>-->
     </div>
     <!-- **boostrap** -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
