--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -8,21 +7,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- link referencia fontes-->
     <link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
-    <link href="https://www.linkedin.com/" rel="shortlink" />
-    <link href="" />
-
-    <link href="https://github.com/a-paludetti/a-paludetti.github.io" />
-    <title></title>
-
+    <title>(WhoIsAline)</title>
     <style>
+        .main-area {
+            width: 80%;
+            max-width: 1440px;
+            margin: auto;
+            margin-top: 60px;
+        }
+
         body {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
         h1 {
             font-family: 'Calligraffitti', cursive;
-            text-align: center;
             font-size: 75px;
+            text-align: center;
             margin: 40px 0 0 0;
         }
 
@@ -30,80 +31,124 @@
             text-align: center;
             margin: 0px 0 70px 0;
         }
+
+        .foto {
+            margin: 10px auto;
+            padding: 40px 20px 0 0;
+        }
+
+        @media (max-width: 500px) {
+            .main-area {
+                margin: auto;
+                margin-top: 10px 10px 0 10px;
+                width: 100%;
+                max-width:350px;
+            }
+            .foto {
+                margin: 5px auto;               
+            }
+            img{
+                max-width: 160px;
+            }
+            h1{
+                font-size: 35px;
+                margin: 10px 0 0 0;
+                line-height: 43px;
+            }
+            .name{
+                text-align:center;
+            }
+        }
+
+        @media (max-width: 800px){
+
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="foto>
-            <div class="col-6">
-                <img src="/IMG_0952.JPG" alt="Aline" style="width:200px;" />
+    <div class="main-area border">
+        <div class="container">
+            <div class="row">
+                <div class="foto">
+                    <div class="col-6 col-md-12 col-sm-12">
+                        <img src="IMG_0952.JPG" alt="Aline" style="width:300px; float: left" />
+                    </div>
+                </div>
+                <div class="name">
+                    <div class="col-6 col-md-12 col-sm-12">
+                        <h1>
+                            Aline Paludetti
+                        </h1>
+                        <h2>
+                            web &amp; java developer
+                        </h2>
+                    </div>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-3 col-md-4 col-sm-12">
+                    <div class="skills1">
+
+                        <p>
+                            Java<br />
+                        </p>
+                    </div>
+                </div>
+                <div class="col-3 col-md-4 col-sm-12">
+                    <div class="skills2">
+                        <p>
+                            HTML/CSS
+                        </p>
+                    </div>
+                </div>
+                <div class="col-3 col-md-4 col-sm-12">
+                    <div class="skills3">
+                        <p>
+                            Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
+                        </p>
+                    </div>
+                </div>
+                <div class="col-3 col-md-4 col-sm-12">
+                    <div class="skills3">
+                        <p>
+                            Histórico Proffisional:<br /><br />
+                            <strong>Telefonica S.A. – Julho/2016 – Março/2017</strong><br />
+                            Atendimento cliente interno<br />
+                            Atendimento segmento Fibra Optica, configuração, criação e suporte a campo para técnicos de fibra, confirmação de funcionamento e atendimento ao cliente interno e externo.<br /><br />
+                            <strong>Xerox do Brasil - de Abril/2012 a Abril/2014</strong><br />
+                            Atendimento avançado bilingüe<br />
+                            Atendimento a clientes no segmento de Informática (smartphones e tablets), atendimento primário à clientes A e B, com foco em resolução de problemas, satisfação e fidelização.<br /><br />
+                            <strong>Atento Brasil - de fevereiro/2010 a abril/2011</strong><br />
+                            Teleoperadora<br />
+                            Atendimento à clientes Itau-Unibanco, setor de financiamento de veículos.<br /><br />
+                            <strong>FIC - Financeira Itau CDB - de abril/2008 a setembro/2008</strong><br />
+                            Vendedora<br />
+                            Venda de cartão de crédito e cartões da loja, empréstimos via cartão e via cheque<br />
+                        </p>
+                    </div>
+                </div>
+                </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="contato">
+                        <p>
+                            Telefone: +55 1197633-8343 <br />
+                            e-mail: a.paludetti@gmail.com <br />
+                            github: <a href="https://github.com/a-paludetti">a-paludetti</a><br />
+                            <a href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/" title="Linkedin">Linkedin</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+            </div>
+            <!--<div class="foootnote">
+                <div class="col-12">
+                    <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+                </div>
+            </div>-->
         </div>
-        <div class="name">
-            <div class="col-6">
-                <h1>
-                    Aline Paludetti
-                </h1>
-                <h2>
-                    web &amp; java developer
-                </h2>
-            </div>
-        </div>
-        <div class="skills1">
-            <div class=" col-3 col-md-4 col-sm-12">
-                <p>
-                    Java<br />
-                </p>
-            </div>
-        </div>
-        <div class="skills2">
-            <div class=" col-3 col-md-4 col-sm-12">
-                <p>
-                    HTML/CSS
-                </p>
-            </div>
-        </div>
-        <div class="skills3">
-            <div class=" col-3 col-md-4 col-sm-12">
-                <p>
-                    Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
-                </p>
-            </div>
-        </div>
-        <div class="skills3">
-            <div class=" col-3 col-md-4 col-sm-12">
-                <p>
-                    Histórico Proffisional:<br /><br />
-                    <strong>Telefonica S.A. – Julho/2016 – Março/2017</strong><br />
-                    Atendimento cliente interno<br />
-                    Atendimento segmento Fibra Optica, configuração, criação e suporte a campo para técnicos de fibra, confirmação de funcionamento e atendimento ao cliente interno e externo.<br /><br />
-                    <strong>Xerox do Brasil - de Abril/2012 a Abril/2014</strong><br />
-                    Atendimento avançado bilingüe<br />
-                    Atendimento a clientes no segmento de Informática (smartphones e tablets), atendimento primário à clientes A e B, com foco em resolução de problemas, satisfação e fidelização.<br /><br />
-                    <strong>Atento Brasil - de fevereiro/2010 a abril/2011</strong><br />
-                    Teleoperadora<br />
-                    Atendimento à clientes Itau-Unibanco, setor de financiamento de veículos.<br /><br />
-                    <strong>FIC - Financeira Itau CDB - de abril/2008 a setembro/2008</strong><br />
-                    Vendedora<br />
-                    Venda de cartão de crédito e cartões da loja, empréstimos via cartão e via cheque<br />
-                </p>
-            </div>
-        </div>
-        <div class="contato">
-            <div class="col-12">
-                <p>
-                    Telefone: +55 1197633-8343 <br />
-                    e-mail: a.paludetti@gmail.com <br />
-                    github: <a href="https://github.com/a-paludetti">a-paludetti</a><br />
-                    <a href="https://www.linkedin.com/in/aline-paludetti-8a27b1b2/" title="Linkedin">Linkedin</a>
-                </p>
-            </div>
-        </div>
-        <!--<div class="foootnote">
-            <div class="col-12">
-                <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-            </div>
-        </div>-->
     </div>
     <!-- **boostrap** -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
