--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             margin: 0px 0 70px 0;
         }
 
+        p {
+            font-size: 18px;
+            line-height: 30px;
+            text-align: justify;
+        }
+
         .foto {
             margin: 10px auto;
             padding: 40px 20px 0 0;
@@ -42,26 +48,52 @@
                 margin: auto;
                 margin-top: 10px 10px 0 10px;
                 width: 100%;
-                max-width:350px;
+                max-width: 350px;
             }
+
             .foto {
-                margin: 5px auto;               
+                margin: 5px auto;
             }
-            img{
+
+            img {
                 max-width: 160px;
             }
-            h1{
+
+            h1 {
                 font-size: 35px;
                 margin: 10px 0 0 0;
                 line-height: 43px;
             }
-            .name{
-                text-align:center;
+
+            .name {
+                text-align: center;
             }
         }
 
-        @media (max-width: 800px){
+        @media (max-width: 800px) {
+            .main-area {
+                margin: 10px 10px 0 10px;
+                width: 100%;
+                max-width: 750px;
+            }
 
+            .foto {
+                margin: 5px auto;
+            }
+
+            img {
+                max-width: 160px;
+            }
+
+            h1 {
+                font-size: 35px;
+                margin: 60px 0 0 0;
+                line-height: 50px;
+            }
+
+            .name {
+                text-align: center;
+            }
         }
     </style>
 </head>
@@ -86,32 +118,38 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-3 col-md-4 col-sm-12">
-                    <div class="skills1">
-
+                <div class="skills1">
+                    <div class="col-4 col-md-6 col-sm-12">
+                        <h4>Conhecimentos Técnicos:</h4>
                         <p>
-                            Java<br />
+                            Java EE<br />
+                            C#<br />
+                            HTML5/CSS3/JavaScript<br />
+                            Photoshop CS6<br />
+                            Sketchbook Pro<br /><br />
                         </p>
                     </div>
                 </div>
-                <div class="col-3 col-md-4 col-sm-12">
-                    <div class="skills2">
+                <div class="skills2">
+                    <div class="col-4 col-md-6 col-sm-12">
+                        <h4>Projetos Pessoais:</h4>
                         <p>
-                            HTML/CSS
+                            Astronoma Amadora<br />
+                            <a href="https://www.instagram.com/msraven85/">Fotografia</a><br />
+                            Content Creator<br />
+                            Escritora nas horas vagas<br /><br />
                         </p>
                     </div>
                 </div>
-                <div class="col-3 col-md-4 col-sm-12">
-                    <div class="skills3">
-                        <p>
-                            Softskills <br /> 6 anos de experiência com cliente externo e interno e resolução de problemas técnicos
-                        </p>
-                    </div>
+                <div class="col-4 col-md-12 col-sm-12">
+                    <img src="https://instagram.fgru5-1.fna.fbcdn.net/vp/4c068f546bb7dd93f4185fb664330b71/5C5893B5/t51.2885-15/sh0.08/e35/s640x640/40808382_1672446002884378_8458383525975524789_n.jpg" alt="Minha fofa" style="width:375px;" /><br /><br />
                 </div>
-                <div class="col-3 col-md-4 col-sm-12">
-                    <div class="skills3">
+                </div>
+            <div class="row">
+                <div class="skills3">
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <h4>Histórico Proffisional:</h4>
                         <p>
-                            Histórico Proffisional:<br /><br />
                             <strong>Telefonica S.A. – Julho/2016 – Março/2017</strong><br />
                             Atendimento cliente interno<br />
                             Atendimento segmento Fibra Optica, configuração, criação e suporte a campo para técnicos de fibra, confirmação de funcionamento e atendimento ao cliente interno e externo.<br /><br />
@@ -127,10 +165,9 @@
                         </p>
                     </div>
                 </div>
-                </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="contato">
+                <div class="contato">
+                    <div class="col-6 col-md-6 col-sm-12">
+                        <h4>Contato:</h4>
                         <p>
                             Telefone: +55 1197633-8343 <br />
                             e-mail: a.paludetti@gmail.com <br />
