--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                             C#<br />
                             HTML5/CSS3/JavaScript<br />
                             Photoshop CS6<br />
-                            Sketchbook Pro<br /><br />
+                            Sketchbook Pro<br />
+                            <a href="exemplo.html">Exemplo de HTML</a><br/><br/>
                         </p>
                     </div>
                 </div>
